// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`для поля с вином без квоты поставит промо кнопку 1`] = `
<span
  className="CardInfoRow__cell"
>
  <Connect(VinPromoButton)
    text="foo"
    type="link"
    vinReport={
      Object {
        "billing": Object {},
      }
    }
  />
</span>
`;

exports[`для поля с вином поставит просто значение 1`] = `
<span
  className="CardInfoRow__cell"
>
  foo
</span>
`;

exports[`для поля с вином с квотой поставит линк 1`] = `
<span
  className="CardInfoRow__cell"
>
  <Link
    onClick={[Function]}
  >
    foo
  </Link>
</span>
`;
